# matrix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  matrix.c  matrix.h  script.py
.github/workflows/: ci.yaml
LaTeX/: matrix.tex
lib/: matrix.h
matlib/include/: matrix.c  matrix.h
release/include/: matrix.h
release/lib/: libmatrix.so.1  libmatrix.so.1.0.0
src/: Makefile  main.c  matrix.c  matrix.h  test_cases.c
test/: test_cases.c  test_doubles.c  test_ints.c  tests.c
